--- a/flask-lessons/trello-clone/.flaskenv.sample
+++ b/flask-lessons/trello-clone/.flaskenv.sample
@@ -2,3 +2,4 @@
 FLASK_RUN_PORT= # Flask Server port
 FLASK_DEBUG= # Set True for debug mode
 JWT_KEY= # JWT signing key
+DB_URI= # Database URI connection string
